# AnimationOpenGL

./: CMakeLists.txt  mainTriangleMultiColor.cpp
include/: shaders.h
resources/: shadelFV.frag  shadelFV.vert  shadersFV.vert
src/: mainProyectoFinal.cpp  shaders.cpp
src/actclase/: main1stwindow.cpp  mainTriangleColor.cpp  mainTriangleTexture.cpp
